(fix): do not allow unlock post button to overlap play button

--- a/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
+++ b/src/app/modules/wire/lock-screen/wire-lock-screen.component.scss
@@ -61,6 +61,10 @@ m-wire--lock-screen.m-wire--lock-screen-2020 {
     text-align: center;
   }
 
+  .isVideo .m-wireLockScreen__inner {
+    padding-top: 80px;
+  }
+
   .m-wireLockScreen__message {
     margin: 20px auto;
     text-align: center;
